src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;


:root {
    --primary: #1230AE;
    --primary-light: #6C48C5;
    --secondary: #C68FE6;
    --secondary-light: #FFF7F7;

    --main-padding: 0;
    --main-margin: 0;
}


html, body {
    padding: var(--main-padding);
    margin: var(--main-margin);
    box-sizing: border-box;
    padding-top: env(safe-area-inset-top);
    padding-left: env(safe-area-inset-left);
    padding-right: env(safe-area-inset-right);
    padding-bottom: env(safe-area-inset-bottom);
    background-color: #497D74;
}


@layer base {
    body {
      @apply text-base sm:text-lg md:text-xl; /* Base font size for body */
    }
  
    h1 {
      @apply text-3xl font-medium sm:text-4xl md:text-5xl lg:text-6xl; /* Heading sizes */
    }
  
    h2 {
      @apply text-2xl font-medium sm:text-3xl md:text-4xl; /* Subheadings */
    }

    h3 {
      @apply text-xl font-medium sm:text-2xl md:text-3xl;
    }
  
    p {
      @apply text-sm sm:text-base md:text-lg; /* Paragraph text */
    }
  }

@layer components{
  .projects_img_div{
    @apply h-32 object-cover object-center mx-10 md:w-96 hover:underline;
  }

  .projects_img{
    @apply w-full h-full object-cover object-center hover:opacity-40;
  }  
}

